# YALLL

./: .gitignore  CMakeLists.txt  Manifesto.yal  README.md  TODO.md  output.ll
antlr/: YALLL.g4
cmake/: ExternalAntlr4Cpp.cmake
concepts/: functioncalls.md  objecterrortable.md
ideas/: errorhandling.md  typesystem.md
programs/: addition.yalll  arrays.y  bools.y  compare.y  floats.y  functions.y  ifelse.y  integer_calc.y  typeprefixes.y
src/: ir_generator.cpp  ir_generator.h  main.cpp  visitor_impl.cpp  visitor_impl.h
src/compiler/: compilerimports.cpp  llvmdataholder.h  visitor_impl.cpp  visitor_impl.h
src/function/: function.cpp  function.h
src/import/: import.h
src/interpreter/: stack.h  visitor_impl.cpp  visitor_impl.h
src/logging/: logger.cpp  logger.h
src/object/: object.h
src/operation/: addoperation.cpp  addoperation.h  andoperation.cpp  andoperation.h  cmpoperation.cpp  cmpoperation.h  funccalloperation.cpp  funccalloperation.h  muloperation.cpp  muloperation.h  operation.cpp  operation.h  oroperation.cpp  oroperation.h  terminaloperation.cpp  terminaloperation.h
src/pointer/: pointer.h
src/scoping/: scope.cpp  scope.h
src/structures/: generator.h  object.h  variant.h
src/structures/operation/: operation.h
src/structures/pointer/: pointer.h
src/structures/variant/: variant.h
src/typesafety/: compatibilitymatrix.h  typeresolver.cpp  typeresolver.h  typesafety.cpp  typesafety.h  typesizes.h
src/value/: value.cpp  value.h
